--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,10 @@ logging:
 
 # Spring配置
 spring:
+  # JSON格式化
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
   # 资源信息
   messages:
     # 国际化资源文件路径
