update:Mybatis配置调整为Mybatis Plus

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -95,14 +95,26 @@ token:
     # 令牌有效期（默认30分钟）
     expireTime: 30
 
-# MyBatis配置
-mybatis:
-    # 搜索指定包别名
-    typeAliasesPackage: com.ruoyi.project.**.domain
-    # 配置mapper的扫描，找到所有的mapper.xml映射文件
-    mapperLocations: classpath*:mybatis/**/*Mapper.xml
-    # 加载全局的配置文件
-    configLocation: classpath:mybatis/mybatis-config.xml
+
+# MyBatis Plus 配置
+mybatis-plus:
+  # 配置mapper的扫描，找到所有的mapper.xml映射文件
+  mapper-locations: classpath*:/mybatis/**/*Mapper.xml
+  # 搜索指定包别名
+  type-aliases-package: com.ruoyi.project.**.domain
+  # 加载全局的配置文件
+  # config-location: classpath:mybatis/mybatis-config.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+  global-config:
+    db-config:
+      insert-strategy: not_empty
+      update-strategy: not_empty
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
 
 # PageHelper分页插件
 pagehelper:
