--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,11 @@
         </dependency>
 
         <!-- SpringBoot集成mybatis框架 -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.spring.boot.starter.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--            <version>${mybatis.spring.boot.starter.version}</version>-->
+<!--        </dependency>-->
 
         <!-- pagehelper 分页插件 -->
         <dependency>
